# RS-CIL-Suite

./: .gitignore  BASELINE_GUIDE.md  CLAUDE.md  IDEA_REPORT_v3.md  IDEA_REPORT_v4.md  IDEA_REPORT_v5.md  LICENSE  NEXT_ROUND_PLAN.md  NEXT_STAGE_PLAN.md  README.md  README_CN.md  STAGE5_PLAN.md  STAGE_SUMMARY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmark/: README.md  compare.py  config.py  demo_plots.py  download.py  infer.py  run.py
benchmark/configs/: acil.yaml  bic.yaml  defaults.yaml  der.yaml  er_ace.yaml  ewc.yaml  finetune.yaml  gdumb.yaml  gpm.yaml  icarl.yaml  joint.yaml  lucir.yaml  lwf.yaml  ncm.yaml  podnet.yaml  si.yaml  wa.yaml
benchmark/datasets/: __init__.py  base.py  hsi_lidar.py  hsi_only.py  preprocess.py  registry.py
benchmark/eval/: __init__.py  colors.py  metrics.py  plots.py
benchmark/methods/: __init__.py  _template.py  acil.py  base.py  bic.py  der.py  er.py  er_ace.py  ewc.py  finetune.py  gdumb.py  gpm.py  icarl.py  joint.py  lucir.py  lwf.py  ncm.py  podnet.py  si.py  wa.py
benchmark/models/: __init__.py  resnet_hsi.py  simple_encoder.py  vit_hsi.py
benchmark/protocols/: __init__.py  (+1 more)
docs/: HALM-CIL_方法说明.md  IDEA_REPORT.md  IDEA_REPORT_v2.md  LITERATURE_SURVEY.md  METHODS_AUDIT_2026-03.md  METHODS_INVENTORY.md  NEXT_STAGE_DESIGN.md  RESEARCH_REVIEW_SART.md
paper/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  math_commands.tex  references.bib
tests/: conftest.py  test_compare.py  test_config.py  test_exemplars.py  test_imports.py  test_methods.py  test_metrics.py  test_models.py  test_protocols.py
(+12 files in other folders)
